# mtgfr

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  bacon.toml  design.tokens.json  docker-compose.yml  justfile  package-lock.json  package.json  skills-lock.json  task-11-report.md
.config/: nextest.toml
.cursor/: Dockerfile  environment.json  hooks.json  mcp.json  settings.json
.cursor/hooks/: regen-cr-index.py
.cursor/rules/: no-tailwind-apply.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: card-bug.yml
.github/workflows/: ci.yml  docker.yml  verify-and-release.yml  verify-jobs.yml
.impeccable/: design.json
.superpowers/sdd/: destroy-split-report.md  final-fix-report.md  task-1-report.md  task-10-report.md  task-2-5-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-report.md
client/: .gitignore  app.config.ts  biome.json  drizzle.config.ts  index.html  nitro.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
client/app/: deck-id.test.ts  deck-id.ts  entry.ts  faro.ts  fetch-api-version.ts  init.ts  main-exports.ts  messages.ts  model.ts  reject.test.ts  resources.ts  routes.test.ts  routes.ts  smoke.test.ts  subscriptions.ts  update.ts  view-transition.test.ts  view-transition.ts  view.ts
client/db/: schema.ts
client/lib/: api-upstream-auth.ts  api-upstream.ts  boardStatus.ts  build-meta.test.ts  build-meta.ts  cardPickSearch.test.ts  cardPickSearch.ts  choice.test.ts  choice.ts  choiceWaiting.test.ts  choiceWaiting.ts  client-build-options.test.ts  client-build-options.ts  cn.test.ts  cn.ts  combatCoach.test.ts  combatCoach.ts  costPips.test.ts  costPips.ts  design-tokens.generated.ts  design-tokens.test.ts  event-fold.ts  image-cache.test.ts  image-cache.ts  inspect.test.ts  inspect.ts  lobby-store.test.ts  lobby-store.ts  lobby-types.ts  manaPips.test.ts  manaPips.ts  mulligan.test.ts  mulligan.ts  optionFilter.test.ts  optionFilter.ts  oracleText.test.ts  oracleText.ts  outcome.ts  players.ts  priorityContextChrome.test.ts  (+14 more)
client/scripts/: gen-mana-oracle.mjs  gen-tokens.mjs  gen.sh  migrate.sh
client/src/: Auth.tsx  Board.tsx  CardPreview.tsx  ConfirmDialog.tsx  DeckBuilder.tsx  Decks.tsx  Hand.tsx  Lobby.tsx  Play.tsx  PortraitGate.tsx  app.tsx  atoms.test.ts  atoms.ts  entry-client.tsx  entry-server.tsx  global.css  guard.ts  guard.tsx  index.tsx  layout.test.ts  layout.ts  lobby.test.ts  lobbyPoll.ts  net.test.ts  net.ts  store.test.ts  store.ts  vite-env.d.ts
client/styles/: global.css  mana-oracle.css  tokens.generated.css
client/vite/: app-plugins.test.ts  app-plugins.ts
config/: mtgfr.toml
crates/cards/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: amount.rs  apply.rs  cast.rs  characteristics.rs  characteristics_cache.rs  combat.rs  core.rs  de.rs  effects.rs  label.rs  lib.rs  mulligan.rs  pipeline.rs  playable.rs  priority.rs  query.rs  resolution.rs  rng.rs  spawn.rs  state.rs  triggers.rs  zones.rs
crates/engine/src/pending/: dispatch.rs  handlers.rs  mod.rs
crates/engine/src/pending/handlers/: combat.rs  common.rs  dig.rs  edict.rs  fanout.rs  library.rs  mod.rs  optional.rs  targets.rs
crates/engine/src/pending/raise/: common.rs  copy.rs  dig.rs  edict.rs  fanout.rs  library.rs  mod.rs  optional.rs
crates/engine/src/resolution/: control.rs  copy.rs  counters.rs  damage.rs  destroy.rs  draw.rs  frame.rs  life.rs  mana.rs  mill.rs  mint.rs  misc.rs  mod.rs  pause_arrange.rs  pause_choose.rs  pause_counter_spell.rs  pause_edict.rs  pause_exile_cast.rs  pause_fight.rs  pause_hand.rs  pause_look.rs  pause_may.rs  pump.rs  resolve_misc.rs  resume.rs  reveal.rs  sequence_steps.rs  tokens.rs  zones.rs
crates/engine/src/types/: card.rs  effect.rs  filter.rs  inspect.rs  mana.rs  mod.rs  stack.rs  trigger.rs
crates/engine/src/types/effect/: choice.rs  control.rs  copy.rs  counters.rs  damage.rs  destroy.rs  dig.rs  draw.rs  exile.rs  life.rs  mana.rs  mill.rs  misc.rs  mod.rs  pump.rs  reveal.rs  sacrifice.rs  shared.rs  static.rs  token.rs  zone.rs
crates/engine/tests/: de.rs  game.rs
crates/schema/: Cargo.toml
crates/server/: Cargo.toml  build.rs
crates/server/fixtures/decks/: deathdancer_xira.json  enchantress_rubinia.json  lorehold_spirit.json  mirror_mastery.json  political_puppets.json  prismari_artistry.json  quandrix_unlimited.json  silverquill_influence.json  witherbloom_pestilence.json
crates/server/src/: action_log.rs  admin.rs  auth.rs  beacon.rs  catalog_search.rs  chrome.rs  db.rs  decks.rs  decks_api.rs  game_loop.rs  health.rs  http_tests.rs  legality.rs  lib.rs  lobby.rs  main.rs  precons.rs  session.rs  settings.rs  stream.rs  table.rs  telemetry.rs  test_support.rs
crates/server/src/grpc/: auth_ctx.rs  auth_svc.rs  cards_svc.rs  decks_svc.rs  game_svc.rs  mod.rs  tables_svc.rs  tests.rs  trace.rs
crates/server/src/grpc/map/: catalog.rs  common.rs  intent.rs  mod.rs  stream.rs
decklists/: deathdancer_xira.md  enchantress_rubinia.md  lorehold_spirit.md  prismari_artistry.md  quandrix_unlimited.md  silverquill_influence.md  witherbloom_pestilence.md
docker/server/: Dockerfile
docs/: CR_INDEX.md  FIDELITY_BACKLOG.md  README.md  WIRE_COMPAT.md  agent-navigation.md  client-canvas-map.md
iac/: .terraform.lock.hcl  api-proxy.tf  api.tf  argocd.tf  backend.tf  locals.tf  migrate.tf  namespace.tf  network-policy.tf  observability.tf  outputs.tf  postgres-web-db.tf  postgres.tf  providers.tf  proxy.tf  secrets.tf  terraform.tfvars.example  tunnel.tf  variables.tf  versions.tf  web-migrate.tf  web.tf
proto/: buf.gen.yaml
scratchpad/: drive.py
scripts/: check-docker-workflow-cache.sh  effect_type_map.json  fix_missing_cr.py  gen_cr_index.py  migrate_effect_toml.py  scan_missing_cr.py  test_migrate_effect_toml.py
toasty/: history.toml
tooling/: analyze-otags.mjs  backfill-card-ids.mjs  backfill-card-meta.mjs  backfill-oracle.mjs  backfill-otags.mjs  rewrite-grind-precon-fixtures.mjs  rewrite-precon-fixtures.mjs
(+1259 files in other folders)
