[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
engine.workspace = true
schema.workspace = true
cards.workspace = true
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
toasty = { version = "0.8", features = ["postgresql"] }
toasty-cli = "0.8"
anyhow = "1"
config = "0.14"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs", "set-header"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
argon2 = "0.5"
rand = "0.8"
# gRPC transport for the .proto-owned wire (ADR 0032): tonic 0.12+ runs on hyper 1 / axum 0.8.
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
opentelemetry = { version = "0.31", features = ["trace", "metrics", "logs"] }
# `rt-tokio` + experimental *with_async_runtime processors = LogRocket's
# `install_batch(Tokio)` for SDK 0.31 (default thread batch + async HTTP panics).
opentelemetry_sdk = { version = "0.31", features = [
    "rt-tokio",
    "trace",
    "metrics",
    "logs",
    "experimental_trace_batch_span_processor_with_async_runtime",
    "experimental_logs_batch_log_processor_with_async_runtime",
    "experimental_metrics_periodicreader_with_async_runtime",
] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-client", "trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.31"
tracing-opentelemetry = "0.32"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
# `test-util` unlocks `#[tokio::test(start_paused = true)]` so the heartbeat test advances virtual
# time to the interval instead of sleeping for real.
tokio = { version = "1", features = ["test-util"] }
# Unifies only for tests (resolver v2/v3) — not `cargo build` / `--release`.
toasty = { version = "0.8", features = ["sqlite"] }
